objects/smagicinteract__Converse_App_Task__c.object
<CustomObject>
    <fields>
        <fullName>attendee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attendee</label>
        <referenceTo>evt__Attendee__c</referenceTo>
        <relationshipLabel>Converse App Tasks</relationshipLabel>
        <relationshipName>converse_app_tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Automation_Key_Reference__c</fullName>
        <label>Automation Key Reference</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Converse App Tasks</relationshipLabel>
        <relationshipName>Converse_App_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Converse_App_Action__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Converse App Action</label>
        <referenceTo>smagicinteract__Converse_App_Action__c</referenceTo>
        <relationshipLabel>Converse App Tasks</relationshipLabel>
        <relationshipName>Converse_App_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__ErrorMessages__c</fullName>
        <label>Error Messages</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Event_Id__c</fullName>
        <label>Event Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Incoming_SMS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incoming SMS</label>
        <referenceTo>smagicinteract__Incoming_SMS__c</referenceTo>
        <relationshipLabel>Converse App Tasks</relationshipLabel>
        <relationshipName>Converse_App_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Converse App Tasks</relationshipLabel>
        <relationshipName>Converse_App_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__SMS_History__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SMS History</label>
        <referenceTo>smagicinteract__smsMagic__c</referenceTo>
        <relationshipLabel>Converse App Tasks</relationshipLabel>
        <relationshipName>Converse_App_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                    <default>true</default>
                    <label>Success</label>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smagicinteract__Task_Id__c</fullName>
        <label>Task Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Template</label>
        <referenceTo>smagicinteract__SMS_Template__c</referenceTo>
        <relationshipLabel>Converse App Tasks</relationshipLabel>
        <relationshipName>Converse_App_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Automation</fullName>
                    <default>true</default>
                    <label>Automation</label>
                </value>
                <value>
                    <fullName>Bulk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Converse App Task</label>
    <listViews>
        <fullName>Nolan_Daigle_Converse_App_Task</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Converse App Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>